--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # Edit next line, providing your own name.
 title: Saiyam Jain | Professional Portfolio
 # Edit next line, replacing 'techfolios' with your github username
-url: "https://saiyamjain.github.io"
+url: "https://saiyam31098.github.io"
 # Edit next line so that baseurl is "" if your repo is <username>.github.io
 baseurl: ""
 
